Fixed a bug where Matrix fields' Add Block button groups weren't collapsing into a menu button when the browser window couldn't fit all of the normal buttons

--- a/src/resources/css/craft.scss
+++ b/src/resources/css/craft.scss
@@ -304,7 +304,6 @@ table.inputs td > .btngroup { float: none; }
 	@include linear-gradient(hsl($hue, 5%, 90%), hsl($hue, 5%, 92%));
 }
 
-.btngroup,
 .btn,
 .spinner { height: 30px; }
 
